; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions.c_final_maxfragmentlen.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions.c_final_maxfragmentlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i64, i64, i64 }

@SSL_AD_MISSING_EXTENSION = common dso_local global i32 0, align 4
@SSL_F_FINAL_MAXFRAGMENTLEN = common dso_local global i32 0, align 4
@SSL_R_BAD_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32, i32)* @final_maxfragmentlen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @final_maxfragmentlen(%struct.TYPE_5__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %32

12:                                               ; preds = %3
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %32

17:                                               ; preds = %12
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = call i64 @USE_MAX_FRAGMENT_LENGTH_EXT(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %17
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %32, label %26

26:                                               ; preds = %23
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = load i32, i32* @SSL_AD_MISSING_EXTENSION, align 4
  %29 = load i32, i32* @SSL_F_FINAL_MAXFRAGMENTLEN, align 4
  %30 = load i32, i32* @SSL_R_BAD_EXTENSION, align 4
  %31 = call i32 @SSLfatal(%struct.TYPE_5__* %27, i32 %28, i32 %29, i32 %30)
  store i32 0, i32* %4, align 4
  br label %59

32:                                               ; preds = %23, %17, %12, %3
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %58

37:                                               ; preds = %32
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = load i64, i64* %39, align 8
  %41 = call i64 @USE_MAX_FRAGMENT_LENGTH_EXT(i64 %40)
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %58

43:                                               ; preds = %37
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 1
  %49 = load i64, i64* %48, align 8
  %50 = call i64 @GET_MAX_FRAGMENT_LENGTH(i64 %49)
  %51 = icmp slt i64 %46, %50
  br i1 %51, label %52, label %58

52:                                               ; preds = %43
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %54 = call i32 @ssl3_setup_buffers(%struct.TYPE_5__* %53)
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %57, label %56

56:                                               ; preds = %52
  store i32 0, i32* %4, align 4
  br label %59

57:                                               ; preds = %52
  br label %58

58:                                               ; preds = %57, %43, %37, %32
  store i32 1, i32* %4, align 4
  br label %59

59:                                               ; preds = %58, %56, %26
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i64 @USE_MAX_FRAGMENT_LENGTH_EXT(i64) #1

declare dso_local i32 @SSLfatal(%struct.TYPE_5__*, i32, i32, i32) #1

declare dso_local i64 @GET_MAX_FRAGMENT_LENGTH(i64) #1

declare dso_local i32 @ssl3_setup_buffers(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
